--- a/vue_client/tsconfig.json
+++ b/vue_client/tsconfig.json
@@ -10,5 +10,12 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+    "compilerOptions": {
+      "baseUrl": ".",
+      "paths": {
+        "vue": ["node_modules/vue/dist/vue.esm-bundler.js"]
+      }
+    },
 }
+
