主界面基本完成

--- a/vue_client/tsconfig.json
+++ b/vue_client/tsconfig.json
@@ -15,7 +15,12 @@
       "baseUrl": ".",
       "paths": {
         "vue": ["node_modules/vue/dist/vue.esm-bundler.js"]
-      }
+      },
+      "types": [
+
+      "node",//新增
+
+    ]
     },
 }
 
