--- a/vue_client/package.json
+++ b/vue_client/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "element-plus": "^2.8.4",
-    "vue": "^3.5.11"
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
@@ -25,7 +26,7 @@
     "@vue/tsconfig": "^0.5.1",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
-    "typescript": "^4.3.5",
+    "typescript": "^5.6.3",
     "vite": "^5.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
