--- a/vue_client/package.json
+++ b/vue_client/package.json
@@ -12,7 +12,9 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "element-plus": "^2.8.4",
+    "pinia": "^2.2.4",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
