--- a/vue_client/package.json
+++ b/vue_client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "element-plus": "^2.8.4",
     "pinia": "^2.2.4",
+    "ts-md5": "^1.3.1",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
@@ -22,6 +23,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.16.11",
+    "@types/uuid": "^10.0.0",
     "@types/vue": "^1.0.31",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/test-utils": "^2.4.6",
